# axum-blog1

./: .env  Cargo.toml  hello-axum.code-workspace  rustfmt.toml
scripts/: admin-insert.sql  admin.sql  article.sql  article_view.sql  article_view_detail.sql  article_view_list.sql  blog.sql  change.pgerd
src/: config.rs  cookie.rs  error.rs  form.rs  lib.rs  main.rs  md.rs  middleware.rs  model.rs  password.rs
src/db/: admin.rs  category.rs  mod.rs  paginate.rs  topic.rs
src/handler/: auth.rs  mod.rs
src/handler/backend/: category.rs  index.rs  mod.rs  topic.rs
src/handler/frontend/: index.rs  mod.rs  topic.rs  z_dabian.rs
src/view/: auth.rs  mod.rs
src/view/backend/: category.rs  index.rs  mod.rs  topic.rs
src/view/frontend/: index.rs  mod.rs  topic.rs  z_dabian.rs
templates/: pagination.html
templates/backend/: base.html  index.html
templates/backend/category/: index.html
templates/backend/topic/: add.html  edit.html  index.html
templates/frontend/: base.html  index.html  topic_detail.html  topic_list.html  z_dabian.html
