[package]
name = "axum-web-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
askama = "0.11"
config = "0.11"
dotenv = "0.15"
tracing = "0.1"
pulldown-cmark = "0.9"
tracing-subscriber = "0.3"
tokio-postgres = "0.7"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"

[dependencies.tokio]
version="1"
features = ["full"]

[dependencies.serde]
version="1"
features = ["derive"]

[dependencies.deadpool-postgres]
version = "0.10"
features = ["serde"]